--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-      
+        <div id="header">Header</div>
         <div id="profile-container">
             <img id="profile-image" src="Image/rsz_dian.jpg" alt="profile image" />
             <h2 id="profile-name">Dian</h2>
-            <p id="profile-job">Software Engineer</p>
         </div>
+
       
     </body>
 </html>
