--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <img id="profile-image" src="Image/rsz_dian.jpg" alt="profile image" />
             <h2 id="profile-name">Dian</h2>
         </div>
-
-      
+        <div id="footer">Footer</div>
+  
     </body>
 </html>
